--- a/natsune/style.css
+++ b/natsune/style.css
@@ -246,3 +246,22 @@
     font-size: 20px;
     padding-top: 1%;
 }
+
+.footer{
+    background-color: brown;
+    width: 100%;
+    height: 30px;
+}
+
+.footer p{
+    color: white;
+    text-align: center;
+    font-size: 20px;
+}
+
+.friend-text{
+    font-family: serif;
+    padding-top: 3%;
+    background: aliceblue;
+    padding-top: 1%;
+}
