--- a/nabeC/style.css
+++ b/nabeC/style.css
@@ -46,12 +46,17 @@
     margin-top: 150px;
     margin-bottom: 2%;
     font-size: 30px;
+    color: burlywood;
 }
 
 .about_me{
     flex-direction: column;
     display: flex;
     align-items: center;
+}
+
+.about_me_inner{
+    color: burlywood;
 }
 
 .my_img{
