--- a/nabeC/style.css
+++ b/nabeC/style.css
@@ -46,7 +46,6 @@
     margin-top: 150px;
     margin-bottom: 2%;
     font-size: 30px;
-    color: burlywood;
 }
 
 .about_me{
@@ -124,6 +123,7 @@
     font-size: 15px;
     color: burlywood;
     border-radius: 10%;
+    text-align: center;
 }
 
 .question-button:hover{
